<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextUser_hint"
        android:inputType="text"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextPassword_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buttonAccept"
        android:textColorHint="@color/white" />
</LinearLayout>